Bug 482966 - "MAPI support for Windows Explorer Send To Mail Recipient doesn't work in 3.0b2" [r+sr=bienvenu]